feat: add and remove features added across pages and exception handling

--- a/CocktailApp/Pages/Discover.cshtml
+++ b/CocktailApp/Pages/Discover.cshtml
@@ -31,10 +31,10 @@
       @foreach (var recipe in Model.recipesList) {
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             
-            <div class="card">
+            <div class="card" style = "margin-bottom: 5px">
                 <a class="recipe-image" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
                 <img class="card-img-top" src="@recipe.RecipeImage" alt="Card image cap"> </a>
-                <div class="card-body">
+                <div class="card-body" >
                     
                     <a class="recipe-text" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
                         <h5 class="card-title">@recipe.RecipeName 
@@ -60,19 +60,21 @@
                         }
                     </a>
                     
-                    
-                    @* TESTING: *@
-                    @*
-                    <form method="post" asp-page-handler="Favourite">
-                    asp-route-ID="@recipe.RecipeId"
-                    <button type="submit" class="btn btn-link" >add</button></form> *@
-                    
-                    @* REAL CODE: *@
-                    @* BUG THAT I CANNOT FIX: Despite handler being present, onPost is called. See writeLine statements in terminal, after clicking the heart on Discover page. *@
-                    <span>
-                        @* I tried to fill the heart here. Couldn't get it right. Just ended up using a seperate SVG of a different filled in heart. *@
                     <form method="post">
-                        <button type="submit" asp-page-handler="Favourite"
+                        <button type="submit" class="btn btn-success" style="padding: 0 6px 0 6px; font-size: 15px; margin-top: 5px; border: 0"
+                        asp-page-handler="Favourite"
+                        asp-route-recipeID= "@recipe.RecipeId"> 
+                            + Add to favourites
+                        </button>
+                            
+                        <button type="submit" class="btn btn-danger" style="padding: 0 6px 0 6px; font-size: 15px; margin-top: 5px; border: 0" asp-page-handler="DeleteFromFavourites" 
+                        asp-route-recipeID= "@recipe.RecipeId"> 
+                            - Remove from favourites
+                        </button>
+
+                        @* I tried to fill the heart here. Couldn't get it right. Just ended up using a seperate SVG of a different filled in heart. *@
+                    
+                        @* <button type="submit" asp-page-handler="Favourite"
                         asp-route-id= "@recipe.RecipeId"
                         class="btn btn-link"> 
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="30" height="30" fill="#ff0000" viewBox="0 0 50 50" xml:space="preserve">
@@ -81,9 +83,8 @@
                                 <path d="M 45 83.769 L 6.653 45.422 C 2.363 41.132 0 35.428 0 29.36 s 2.363 -11.771 6.653 -16.062 c 4.29 -4.291 9.994 -6.653 16.062 -6.653 c 6.068 0 11.772 2.363 16.062 6.653 L 45 19.521 l 6.223 -6.223 c 4.29 -4.291 9.995 -6.653 16.063 -6.653 s 11.771 2.363 16.062 6.653 S 90 23.293 90 29.36 s -2.363 11.771 -6.653 16.062 L 45 83.769 z M 22.715 8.645 c -5.533 0 -10.735 2.155 -14.647 6.067 S 2 23.827 2 29.36 s 2.155 10.735 6.067 14.647 L 45 80.94 l 36.933 -36.933 C 85.845 40.095 88 34.894 88 29.36 s -2.155 -10.735 -6.067 -14.648 C 78.02 10.8 72.817 8.645 67.285 8.645 c -5.533 0 -10.735 2.155 -14.648 6.067 L 45 22.35 l -7.637 -7.637 C 33.45 10.8 28.249 8.645 22.715 8.645 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(247,0,0); fill-rule: nonzero; opacity: 1;"  stroke-linecap="round" />
                                 </g>
                             </svg>
-                        </button>
+                        </button> *@
                     </form> 
-                    </span>
                     
                 </div>
             </div>
