--- a/CocktailApp/Pages/Favourites.cshtml
+++ b/CocktailApp/Pages/Favourites.cshtml
@@ -1,30 +1,14 @@
 @page
 @model FavouritesModel
 
-@* <div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Search for a cocktail" aria-label="Search for a cocktail" aria-describedby="basic-addon2">
-  <div class="input-group-append">
-    <button class="btn btn-outline-secondary" type="button">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-        </svg>
-    </button>
-  </div>
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-filter-circle-fill" viewBox="0 0 16 16">
-            <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM3.5 5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1 0-1zM5 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm2 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5z"/>
-        </svg>
-    </button>
-</div> *@
-
 <div class="row">
       @foreach (var recipe in Model.usersFavouritesList) {
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <a class="card-link-to-recipe" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
-            <div class="card">
+            
+            <div class="card" style = "margin-bottom: 5px">
+                <a class="card-link-to-recipe" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
                 <img class="card-img-top" src="@recipe.RecipeImage" alt="Card image">
-                <div class="card-body">
+                <div class="card-body" style = "padding: 16px 16px 12px 16px">
                     <h5 class="card-title">@recipe.RecipeName 
                         @* @if (recipe.Ratings.Count > 0)
                         {
@@ -46,62 +30,16 @@
                         <span class="badge bg-success">Mocktail</span>
                     }
                 </div>
+                </a>
+
+                <form method="post">
+                <button type="submit" class="btn btn-danger" style="width: 100%; height: 22.5px; padding: 0; font-size: 15px; border: 0" asp-page-handler="DeleteFromFavourites" 
+                asp-route-recipeID= "@recipe.RecipeId"> 
+                   - Remove from favourites
+                </button>
+                </form>
+
             </div>
-            </a>
         </div>
       }
 </div>
-
-@* <!-- Modal -->
-<form method="post">
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Filter Recipes</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <ul class="list-group">
-            <li class="list-group-item">Recipe Type <br>
-                @foreach (var item in Model.recipeTypes)
-                {
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="@item.TypeName" name="recipeType" value="@item.TypeId">
-                        <label class="form-check-label" for="@item.TypeName">@item.TypeName</label>
-                    </div>
-                }
-            </li>
-            <li class="list-group-item">Flavour Profile <br>
-                @foreach (var item in Model.flavourProfiles)
-                {
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="@item.FlavourName" name="flavourProfile" value="@item.FlavourId">
-                        <label class="form-check-label" for="@item.FlavourName">@item.FlavourName</label>
-                    </div>
-                }
-            </li>
-            <li class="list-group-item">Difficulty <br>
-                @foreach (var item in Model.difficulties)
-                {
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" id="@item.DifficultyName" name="difficulty" value="@item.DifficultyId">
-                        <label class="form-check-label" for="@item.DifficultyName">@item.DifficultyName</label>
-                    </div>
-                }
-            </li>
-            <li class="list-group-item">Time <br>
-                Up to <input type="number" class="form-control w-25" id="number" name="time" min="@Model.minTime" max="@Model.maxTime" style="display: inline-block;"> minutes
-            </li>
-        </ul>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-</form> *@
