--- a/CocktailApp/Pages/Favourites.cshtml
+++ b/CocktailApp/Pages/Favourites.cshtml
@@ -6,10 +6,18 @@
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
             
             <div class="card" style = "margin-bottom: 10px">
+
                 <a class="card-link-to-recipe" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
-                <img class="card-img-top" src="@recipe.RecipeImage" alt="Card image">
+                <img class="card-img-top" src="@recipe.RecipeImage" alt="Card image"> 
+                </a>
+
+                <form method="post">
+
                 <div class="card-body" style = "padding: 16px 16px 12px 16px">
-                    <h5 class="card-title">@recipe.RecipeName 
+                    <a class="card-link-to-recipe" asp-page-handler="ViewRecipe" asp-route-ID="@recipe.RecipeId">
+
+                    <h5 class="card-title" style="display: flex; justify-content: space-between; margin: 0">
+                        @recipe.RecipeName 
                         @* @if (recipe.Ratings.Count > 0)
                         {
                             <span>
@@ -19,6 +27,21 @@
                                 </svg>
                             </span>
                         } *@
+
+                        <button type="submit" class="btn btn-link" asp-page-handler="DeleteFromFavourites"
+                        asp-route-recipeID= "@recipe.RecipeId"
+                        style="padding: 0"> 
+                            <svg xmlns="http://www.w3.org/2000/svg" 
+                            width="30" height="30" viewBox="0 0 30 30" >
+                            <defs>
+                            </defs>
+                            <g transform="translate(15 15) scale(0.77 0.77)" width="30" height="30">
+                            <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(-19.35 -19.35) scale(0.43 0.43)" >
+                            <path d="M 84.646 11.504 C 75.554 1.233 58.335 -0.041 45 13.074 C 31.665 -0.041 14.446 1.233 5.354 11.504 c -9.671 10.926 -5.609 31.318 7.123 47.615 C 18.931 67.38 34.874 80.832 45 86.481 c 10.126 -5.649 26.069 -19.101 32.523 -27.362 C 90.255 42.822 94.318 22.43 84.646 11.504 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(255,0,0); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+                            </g>
+                            </g>
+                            </svg>
+                        </button>
                     </h5>
                     <span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch-fill" viewBox="0 0 16 16">
@@ -29,14 +52,14 @@
                     @if (!recipe.ContaintsAlcohol) {
                         <span class="badge bg-success">Mocktail</span>
                     }
+                    </a>
                 </div>
-                </a>
 
-                <form method="post">
-                <button type="submit" class="btn btn-danger" style="width: 100%; height: 22.5px; padding: 0; font-size: 15px; border: 0" asp-page-handler="DeleteFromFavourites" 
+                @* <button type="submit" class="btn btn-danger" style="width: 100%; height: 22.5px; padding: 0; font-size: 15px; border: 0" asp-page-handler="DeleteFromFavourites" 
                 asp-route-recipeID= "@recipe.RecipeId"> 
                    - Remove from favourites
-                </button>
+                </button> *@
+
                 </form>
 
             </div>
