--- a/CocktailApp/Pages/Shared/_Layout.cshtml
+++ b/CocktailApp/Pages/Shared/_Layout.cshtml
@@ -31,9 +31,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Favourites">Favourites</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -48,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - CocktailApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - CocktailApp - You're Welcome
         </div>
     </footer>
 
