--- a/CocktailApp/wwwroot/css/site.css
+++ b/CocktailApp/wwwroot/css/site.css
@@ -16,3 +16,95 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.card-img-top {
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
+}
+
+.card {
+  margin-bottom: 1em;
+}
+
+.recipe-cards {
+  text-decoration: none;
+  color: black;
+}
+
+.recipe-cards:hover {
+  color: black;
+  border: 1px solid cornflowerblue;
+}
+
+.directions {
+  list-style: decimal inside;
+}
+
+.direction {
+  display: list-item;
+}
+
+.btnContainer {
+  margin-top: 15px;
+  width: 100%;
+  position: relative;
+  height: 50px;
+}
+
+#mixologyBtn {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.MixResultHeading {
+  margin-bottom: 40px;
+}
+
+/* Mixology CSS */
+
+.container {
+  overflow: hidden;
+}
+
+.filterDiv {
+  float: left;
+  background-color: #2196f3;
+  color: #ffffff;
+  width: 100px;
+  line-height: 100px;
+  text-align: center;
+  margin: 2px;
+  display: none; /* Hidden by default */
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+
+/* Add a light grey background on mouse-over */
+.btn:hover {
+  background-color: #ddd;
+}
+
+/* Add a dark background to the active button */
+.btn.active {
+  background-color: #666;
+  color: white;
+}
+
+/* Mixology CSS end */
