--- a/CocktailApp/wwwroot/css/site.css
+++ b/CocktailApp/wwwroot/css/site.css
@@ -88,13 +88,13 @@ body {
 }
 
 /* Style the buttons */
-.btn {
+/* .btn {
   border: none;
   outline: none;
   padding: 12px 16px;
   background-color: #f1f1f1;
   cursor: pointer;
-}
+} */
 
 /* Add a light grey background on mouse-over */
 .btn:hover {
