--- a/CocktailApp/Pages/Recipe.cshtml
+++ b/CocktailApp/Pages/Recipe.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CocktailApp.styles.css" asp-append-version="true" />
+    <link rel="icon" href="~/css/favicon.png" type="image/x-icon" />
 </head>
 
 <img class="d-block w-100" src="@Model.recipe.RecipeImage" alt="Recipe Image">
