--- a/CocktailApp/wwwroot/css/site.css
+++ b/CocktailApp/wwwroot/css/site.css
@@ -44,3 +44,17 @@ body {
 .direction {
   display: list-item;
 }
+
+#discoverMenu .form-control {
+  width: 63vw;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+#discoverMenu #searchBtn {
+  border-radius: 0;
+}
+
+#discoverMenu button {
+  width: 2vw;
+}
