--- a/CocktailApp/Pages/Shared/_Layout.cshtml
+++ b/CocktailApp/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CocktailApp.styles.css" asp-append-version="true" />
+    <link rel="icon" href="~/css/favicon.png" type="image/x-icon" />
 </head>
 <body>
     <header>
@@ -30,9 +31,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Favourites">Favourites</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
