feat: add mix result

--- a/CocktailApp/Pages/Mixology.cshtml
+++ b/CocktailApp/Pages/Mixology.cshtml
@@ -34,8 +34,8 @@
         </div>
         </div>
     }
-    <div class="mixologyBtn">
-        <input type="submit" value="Find cocktail" class="btn"/>
+    <div>
+        <input type="submit" value="Find cocktail" class="btn btn-primary" style="margin-top:15px"/>
     </div>
     
 </div>
