--- a/CocktailApp/Pages/Recipe.cshtml
+++ b/CocktailApp/Pages/Recipe.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CocktailApp.styles.css" asp-append-version="true" />
+    <link rel="icon" href="~/css/favicon.png" type="image/x-icon" />
 </head>
 
 <img class="d-block w-100" src="@Model.recipe.RecipeImage" alt="Recipe Image">
@@ -17,6 +18,19 @@
     <span class="badge bg-success">@Model.recipeTags[0]</span>
     <span class="badge bg-info">@Model.recipeTags[1]</span>
     <span class="badge bg-danger">@Model.recipeTags[2]</span>
+    
+        <form method="post">
+          <button type="submit" class="btn btn-success" style="padding: 0 5px 0 5px; margin-top: 10px"
+          asp-route-recipeID= "@Model.recipe.RecipeId"> 
+              + Add to favourites
+          </button>
+            
+          <button type="submit" class="btn btn-danger" style="padding: 0 5px 0 5px; margin-top: 10px" asp-page-handler="DeleteFromFavourites" 
+          asp-route-recipeID= "@Model.recipe.RecipeId"> 
+              - Remove from favourites
+          </button>
+        </form> 
+      
 </h5>
 <br>
 <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -48,4 +62,4 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script> 
