Added check on MixResult page for when user does not select an ingredient

--- a/CocktailApp/Pages/MixResult.cshtml
+++ b/CocktailApp/Pages/MixResult.cshtml
@@ -4,6 +4,7 @@
 <title>Mixology Results</title>
 <div class="MixResultHeading"> 
     <h3>These are the cocktails that contain the ingredients you selected:</h3>
+    <h4 style="color: red;">@Model.noIngredientSelectedMsg</h4>
 </div>
 
 <div class="row">
